# app/Models/Provider.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Auth\Middleware\Authenticate;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Foundation\Auth\User as Authenticatable;
+use Laravel\Sanctum\HasApiTokens;
+
+class Provider extends Model
+{
+    use HasFactory;
+    protected $fillable = ['user_id','bio','is_verified'];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+
+    public function services()
+    {
+        return $this->belongsToMany(Service::class, 'provider_services')
+            ->withPivot(['price','custom_description'])
+            ->withTimestamps();
+    }
+}
+
